--- a/store/templates/store/unit_bulk_locker.html
+++ b/store/templates/store/unit_bulk_locker.html
@@ -41,7 +41,7 @@
             focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">
             <i class="fas fa-prescription-bottle-medical mr-2 lg:fa-2xl"></i> Send to Dispensary
             </a>&nbsp;
-            <a href="{% url 'unitissue_report' store.id %}"
+            <a href="{% url 'unit_issue_list' store.id %}"
             class="inline-flex items-center px-4 py-2 border border-transparent text-xs lg:text-sm font-medium rounded-md text-white bg-rose-600 hover:bg-rose-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-rose-500">
             <i class="fas fa-file-pdf mr-2 lg:fa-2xl"></i> Bulk Locker Report
             </a>
