--- a/store/templates/store/unit_request_list.html
+++ b/store/templates/store/unit_request_list.html
@@ -10,6 +10,47 @@
             <h2 class="text-center text-teal-700 uppercase text-lg">{{ unit.name }} DRUGS REQUEST LIST</h2>
         </div>
     </div>
+    <div class="flex flex-wrap justify-center items-center mb-1 space-x-2 gap-2">
+   
+            <!-- Search Form -->
+            <form method="get" class="flex flex-col sm:flex-row items-center space-y-2 sm:space-y-0 sm:space-x-2">
+                <div class="flex flex-col sm:flex-row sm:space-x-2 space-y-2 sm:space-y-0 w-full sm:w-auto">
+                    <div class="flex items-center w-full sm:w-auto">
+                        <label for="q" class="sr-only">Search</label>
+                        <input type="text" name="q" id="q" 
+                               value="{{ query|default_if_none:'' }}" 
+                               placeholder="Search..."
+                               class="focus:ring-amber-500 focus:border-amber-500 block shadow-sm text-xs border-gray-300 rounded-md w-full sm:w-60">
+                    </div>
+                    
+                    <div class="flex items-center w-full sm:w-auto">
+                        <label for="start_date" class="sr-only">Start Date</label>
+                        <input type="date" name="start_date" id="start_date"
+                               value="{{ start_date|default_if_none:'' }}"
+                               class="focus:ring-amber-500 focus:border-amber-500 block shadow-sm text-xs border-gray-300 rounded-md w-full sm:w-auto">
+                    </div>
+                    
+                    <div class="flex items-center w-full sm:w-auto">
+                        <label for="end_date" class="sr-only">End Date</label>
+                        <input type="date" name="end_date" id="end_date"
+                               value="{{ end_date|default_if_none:'' }}"
+                               class="focus:ring-amber-500 focus:border-amber-500 block shadow-sm text-xs border-gray-300 rounded-md w-full sm:w-auto">
+                    </div>
+                </div>
+                
+                <div class="flex space-x-2">
+                    <button type="submit" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">
+                        <i class="fas fa-search"></i>
+                    </button>
+                    
+                    {% if request.GET.urlencode %}
+                    <a href="?" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-amber-500 hover:bg-amber-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-500">
+                        <i class="fas fa-rotate"></i>
+                    </a>
+                    {% endif %}
+                </div>
+            </form>
+    </div>
     <div class="rounded-xl shadow-lg bg-white uppercase">
         <div class="overflow-x-auto rounded-lg">
             <table class="min-w-full divide-y divide-sky-200">
@@ -41,7 +82,7 @@
                     </tr>
                     {% empty %}
                     <tr>
-                        <td colspan="4" class="text-center text-gray-800 py-4">No requests found for this unit.</td>
+                        <td colspan="4" class="text-center text-gray-800 py-4">Not found.</td>
                     </tr>
                     {% endfor %}
                 </tbody>
