--- a/store/templates/store/unit_transfer.html
+++ b/store/templates/store/unit_transfer.html
@@ -16,10 +16,6 @@
            class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-stone-600 hover:bg-stone-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-stone-500">
             <i class="fas fa-plus mr-2"></i> New Transfer
             </a>
-            <a href="{% url 'transfer_report' store.pk %}"
-            class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
-                <i class="fas fa-file-pdf mr-2 fa-2xl"></i> Transfer-Out Report
-                </a>
             <a href="{% url 'unit_received_records' store.pk %}"
             class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500">
                 <i class="fas fa-inbox mr-2 fa-2xl"></i> Transfer-In Records
@@ -38,11 +34,34 @@
                                                     <a href="?" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-amber-500 hover:bg-amber-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-500">
                                                         <i class="fas fa-rotate"></i>
                                                     </a>
+                                                    <a href="{% url 'transfer_pdf' pk=object.pk %}{% if request.GET.q %}?q={{ request.GET.q }}{% endif %}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-rose-600 hover:bg-rose-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-rose-500">
+                                                        <i class="fa-solid fa-file-pdf"></i>
+                                                    </a>
                                                     {% endif %}
                                         
                                                 </form>
             </div>
-        <!-- Unit Issue Records Table -->
+                 <!-- Unit Transfer Records Table -->
+        {% if request.GET.urlencode %}
+        <p class="p-2 whitespace-nowrap text-sm text-center">
+            <span class="text-green-700 font-semibold">
+                Transferred: 
+                {% if total_appearance == 1 %}
+                    once
+                {% else %}
+                    {{ total_appearance }} times
+                {% endif %}
+            </span>
+            <span class="mx-2 text-gray-400">|</span>
+            <span class="text-blue-700 font-semibold">
+                Quantity: {{ total_quantity }}
+            </span>
+            <span class="mx-2 text-gray-400">|</span>
+            <span class="text-purple-700 font-semibold">
+                Value: &#x20A6;{{ total_price|floatformat:2 }}
+            </span>
+        </p>
+        {% endif %}
         <div class="mt-4 bg-white shadow overflow-hidden sm:rounded-lg">
             <div class="overflow-x-auto max-h-[65vh]">
                 <table class="min-w-full divide-y divide-gray-300">
@@ -55,7 +74,6 @@
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Quantity</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Issued To</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Date Issued</th>
-                            <th scope="col" class="px-4 py-2 font-medium tracking-wider">Update</th>
                         </tr>
                     </thead>
                     <tbody class="bg-white divide-y divide-gray-200">
@@ -68,11 +86,6 @@
                             <td class="px-4 py-2 font-medium text-gray-800">{{ r.quantity|default_if_none:''|upper }}</td>
                             <td class="px-4 py-2 text-gray-700">{{ r.issued_to.name|default_if_none:'N/A'|upper }}</td>
                             <td class="px-4 py-2 text-gray-700">{{ r.date_issued }}</td>
-                            <td class="px-4 py-2">
-                                <a href="{% url 'transfer_update' r.id %}" class="text-stone-700 hover:text-stone-900">
-                                    <i class="fas fa-edit fa-lg"></i>
-                                </a>
-                            </td>
                         </tr>
                         {% endfor %}
                     </tbody>
