--- a/store/templates/store/unitissue_report.html
+++ b/store/templates/store/unitissue_report.html
@@ -65,15 +65,27 @@
 
         </div>
     </div>
+    <p class="p-2 whitespace-nowrap text-sm text-center">
+        <span class="text-green-700 font-semibold">
+            Moved: 
+            {% if total_appearance == 1 %}
+                once
+            {% else %}
+                {{ total_appearance }} times
+            {% endif %}
+        </span>
+        <span class="mx-2 text-gray-400">|</span>
+        <span class="text-blue-700 font-semibold">
+            Quantity: {{ total_quantity }}
+        </span>
+        <span class="mx-2 text-gray-400">|</span>
+        <span class="text-purple-700 font-semibold">
+            Value: &#x20A6;{{ total_price|floatformat:2 }}
+        </span>
+    </p>
 
     <div class="bg-white shadow overflow-hidden sm:rounded-lg">
         <div class="overflow-x-auto max-h-[70vh]">
-            <div class="bg-white">
-                <p class="p-2 whitespace-nowrap text-xs text-blue-700 text-center uppercase">
-                    moved: {{ total_appearance }} {%if total_appearance > 1 %}times{%else%} once {% endif %}- Quantity: {{ total_quantity }} - Value: &#x20A6;{{ total_price }}
-                </p>
-                
-            </div>
             <table class="min-w-full divide-y divide-gray-200">
                 <thead class="bg-blue-400">
                     <tr class="text-xs text-gray-900 text-center">
