Enhance unit issue report template and view; add conditional display for moved items and include paginated object in context

--- a/store/templates/store/unitissue_report.html
+++ b/store/templates/store/unitissue_report.html
@@ -65,6 +65,7 @@
 
         </div>
     </div>
+    {% if request.GET.urlencode %}
     <p class="p-2 whitespace-nowrap text-sm text-center">
         <span class="text-green-700 font-semibold">
             Moved: 
@@ -83,7 +84,7 @@
             Value: &#x20A6;{{ total_price|floatformat:2 }}
         </span>
     </p>
-
+{%endif%}
     <div class="bg-white shadow overflow-hidden sm:rounded-lg">
         <div class="overflow-x-auto max-h-[70vh]">
             <table class="min-w-full divide-y divide-gray-200">
