--- a/store/templates/store/receive_pdf.html
+++ b/store/templates/store/receive_pdf.html
@@ -137,7 +137,7 @@ h1 {
             <tr>
                 <th class="small-column">#</th>
                 <th class="mid-column">FROM</th>
-                <th class="">DATE RECEIVED</th>
+                <th class="">DATE</th>
                 <th class="">DRUG INFO</th>
                 <th class="mid-column">SUPPLIER</th>
                 <th class="mid-column">QTY</th>
