--- a/store/templates/store/transfer_pdf.html
+++ b/store/templates/store/transfer_pdf.html
@@ -135,7 +135,7 @@ h1 {
             <tr>
                 <th class="small-column">#</th>
                 <th class="">TRANSFERRED TO</th>
-                <th class="">DATE ISSUED</th>
+                <th class="">DATE</th>
                 <th class="">DRUG INFO</th>
                 <th class="">SUPPLIER</th>
                 <th class="mid-column">QTY</th>
