--- a/store/templates/store/unit_received.html
+++ b/store/templates/store/unit_received.html
@@ -80,7 +80,7 @@
                     <th scope="col" class="px-4 py-2 font-medium tracking-wider">Trade Drug</th>
                     <th scope="col" class="px-4 py-2 font-medium tracking-wider">Quantity</th>
                     <th scope="col" class="px-4 py-2 font-medium tracking-wider">FROM</th>
-                    <th scope="col" class="px-4 py-2 font-medium tracking-wider">Date Issued</th>
+                    <th scope="col" class="px-4 py-2 font-medium tracking-wider">Date</th>
                 </tr>
             </thead>
             <tbody class="bg-white divide-y divide-gray-200">
